@@ -1,8 +1,10 @@
-@comment $NetBSD: PLIST,v 1.3 2002/12/09 16:01:43 tron Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/05/02 17:50:05 xtraeme Exp $
 bin/envdir
 bin/envuidgid
 bin/fghack
 bin/multilog
+bin/pgrphack
+bin/readproctitle
 bin/setlock
 bin/setuidgid
 bin/softlimit
@@ -10,6 +12,7 @@ bin/supervise
 bin/svc
 bin/svok
 bin/svscan
+bin/svscanboot
 bin/svstat
 bin/tai64n
 bin/tai64nlocal
@@ -17,6 +20,8 @@ man/man8/envdir.8
 man/man8/envuidgid.8
 man/man8/fghack.8
 man/man8/multilog.8
+man/man8/pgrphack.8
+man/man8/readproctitle.8
 man/man8/setlock.8
 man/man8/setuidgid.8
 man/man8/softlimit.8
@@ -24,9 +29,9 @@ man/man8/supervise.8
 man/man8/svc.8
 man/man8/svok.8
 man/man8/svscan.8
+man/man8/svscanboot.8
 man/man8/svstat.8
 man/man8/tai64n.8
 man/man8/tai64nlocal.8
 share/examples/daemontools/svscan.sh.sample
 @dirrm share/examples/daemontools
-@exec ${MKDIR} ${SERVICEDIR} || ${TRUE}
