@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.3 2001/10/22 13:42:28 zuntum Exp $
+$NetBSD: distinfo,v 1.4 2004/05/02 17:50:05 xtraeme Exp $
 
-SHA1 (daemontools-0.70.tar.gz) = e4af3b5e6fa5a85fb86fe8d80248421f0f8765ff
-Size (daemontools-0.70.tar.gz) = 36144 bytes
-SHA1 (daemontools-0.70-man-20001116.tar.gz) = 08fd1d5c1af4b620cc80116470468b2f92130d6c
-Size (daemontools-0.70-man-20001116.tar.gz) = 8279 bytes
+SHA1 (daemontools-0.76.tar.gz) = 70a1be67e7dbe0192a887905846acc99ad5ce5b7
+Size (daemontools-0.76.tar.gz) = 36975 bytes
+SHA1 (daemontools-0.76-man.tar.gz) = 28e167def0e457f2be10aa90504c402fa08723ab
+Size (daemontools-0.76-man.tar.gz) = 8005 bytes
